fixed font on firefox

--- a/styles/Options.css
+++ b/styles/Options.css
@@ -1,6 +1,6 @@
 * {
     color: #FFFFFF;
-    font-family: "Martian Mono" monospace;
+    font-family: "Martian Mono", monospace;
     text-align: center;
 }
 
