--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    font-family: "Martian Mono" monospace;
+    font-family: "Martian Mono", monospace;
 }
 
 body {
